--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/tododb?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
 
+springdoc.swagger-ui.path=/swagger-ui.html
+
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework.security.web.*=debug
